src/css/style.css
:root {
    --main-bg-color: #000000;
    --accent-color: rgba(255, 236, 2, 1);
    --controls-height: 80px;
    --controls-bg-color: var(--main-bg-color);
    --controls-separator-color: #000000;
    --main-padding: 20px;
    --cell-size: 11px;
    --viz-low-alpha: 0.25;
    --viz-mid-alpha: 0.5;
    --viz-high-alpha: 0.75;
    --viz-font-size: 16px;
    --viz-color: rgba(255, 236, 2, 1);
    --viz-color-low-alpha: rgba(255, 236, 2, var(--viz-low-alpha));
    --viz-color-mid-alpha: rgba(255, 236, 2, var(--viz-mid-alpha));
    --viz-color-high-alpha: rgba(255, 236, 2, var(--viz-high-alpha));
    --viz-snd-color: rgba(143, 26, 129, 1);
    --viz-snd-color-low-alpha: rgba(143, 26, 129, var(--viz-low-alpha));
    --viz-snd-color-mid-alpha: rgba(143, 26, 129, var(--viz-mid-alpha));
    --viz-snd-color-high-alpha: rgba(143, 26, 129, var(--viz-high-alpha));
    --viz-snd-color-active: rgb(179, 34, 162);
    --viz-bg-color: var(--main-bg-color);
    --viz-waveform-height: 512px;
    --viz-top: var(--main-padding);
}

* {
    /* prevent (visible) text selection */
    user-select: none;

    /* prevent drap and drop */
    /*noinspection CssUnknownProperty*/
    user-drag: none;
    -webkit-user-drag: none;
}

body {
    background-color: var(--main-bg-color);
    text-align: center;
    position: absolute;
    color: #F0F0F0;
    width: 1920px;
    min-height: 1080px;
    height: 100%;
    box-sizing: content-box;
    font-family: 'Exo 2', sans-serif;
    border-right: 1px solid white;
    overflow-x: hidden;
    overflow-y: auto;
    -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
    /*noinspection CssUnknownProperty*/
    scrollbar-width: none; /* Hide scrollbar in Firefox */
    opacity: 0.0;
}

body::-webkit-scrollbar {
    display: none;
}

.fade-in {
    animation: fadeIn 0.25s linear;
    opacity: 1.0;
}

@keyframes fadeIn {
    from {
        opacity: 0.0;
    }
    to {
        opacity: 1.0;
    }
}

#title {
    color: var(--viz-color);
    position: absolute;
    width: 100%;
    font-family: 'gap_sansbold', sans-serif;
    font-size: 150px;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    z-index: 1;
    top: 50px;
    transform: scale(1);
}

#title.recognition {
    animation: moveTitleTop forwards;
}

@keyframes moveTitleTop {
    from {
        top: 50px;
        transform: scale(1);
    }

    to {
        top: 0;
        transform: scale(0.5);
    }
}

#record-button {
    position: relative;
    display: inline-block;
    font-size: 150px;
    margin: var(--main-padding);
}

#record-button * {
    display: block;
}

#record-button *:first-child {
    position: relative;
    animation: 1000ms infinite alternate blinkActive;
}

@keyframes blinkActive {
    to {
        color: var(--viz-snd-color-active);
    }
}

#record-button *:nth-child(2) {
    transition: 0.1s linear;
    position: absolute;
    top: 0;
    left: 0;
    color: yellow;
}

#record-button-container {
    position: absolute;
    width: 100%;
    top: calc(calc(calc(1080px / 2) + calc(513px / 2)) + 50px);
}

#button-bar {
    position: absolute;
    width: 100%;
    bottom: 0;
    padding: var(--main-padding);
}

#button-container {
    position: relative;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#button-container > * {
    display: inline-block;
    box-sizing: content-box;
    align-self: flex-end;
}

#button-container > #language-controls {
    position: absolute;
    right: 0px;
}

#restart-button {
    position: relative;
}

#restart-button *:first-child {
    position: absolute;
    left: -100%;
    padding-right: 1ex;
}

#play-button-container {
    display: flex;
    position: absolute;
    height: 100%;
    left: calc(100% - 1ex);
}

#play-button {
    align-self: center;
}

#viz-container {
    position: absolute;
    top: var(--viz-top);
    display: flex;
    flex-direction: column;
    margin-left: auto;
}

#viz-container .viz {
    color: var(--viz-color);
    background-color: var(--viz-bg-color);
    font-family: 'Inconsolata', monospace;
}

#viz-container > * {
    position: relative;
    display: inline-block;
    margin-bottom: 5px;
}

#viz-container > *:last-child {
    margin-top: inherit;
}

#viz-container .needs-margin {
    margin-left: var(--cell-size);
    margin-right: var(--cell-size);
}

#viz-container .needs-padding {
    padding-left: var(--cell-size);
    padding-right: var(--cell-size)
}

#viz-container .canvas-container canvas {
    display: block;
}

#viz-container .explanation-container {
    display: flex;
    position: absolute;
    width: 440px;
    height: 100%;
    right: calc(-440px - 40px);
    line-height: normal;
    text-align: left;
}

.explanation-container > .explanation {
    margin-top: auto;
    margin-bottom: auto;
}

.explanation-container > .explanation em {
    font-style: normal;
    font-weight: bold;
}

#spectrogram-viz canvas {
    width: 100%;
    height: 256px;
    image-rendering: pixelated;
}

.network-container .swiper-container {
    width: 100%;
    overflow: visible;
}

.network-container .swiper-pagination {
    right: -20px;
}

.network-container .swiper-pagination-bullet {
    width: 20px;
    height: 20px;
    text-align: center;
    line-height: 20px;
    font-size: 12px;
    opacity: 1;
    color: var(--viz-color);
    background: var(--viz-color-low-alpha);
}

.network-container .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
    display: none;
}

.network-container .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet-active {
    display: block;
}

.network-container .swiper-pagination-bullet-active {
    display: block;
}

.network-container .swiper-scrollbar {
    background: var(--viz-snd-color-mid-alpha);
}

.network-container .swiper-scrollbar-drag {
    background: var(--viz-snd-color);
}

.network-container .swiper-scrollbar::before, .network-container .swiper-scrollbar-drag::before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    padding: 0 0 0 20px;
}

.full-width {
    box-sizing: content-box;
    width: 100%;
}

.full-height {
    box-sizing: content-box;
    height: 100%;
}

.full-size {
    box-sizing: content-box;
    width: 100%;
    height: 100%;
}

.transcription-wrapper {
    margin-top: 1em;
}

.transcription {
    font-family: monospace;
    white-space: pre;
    margin-top: 0.5em;
    height: 5em;
}

#main {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
}

#main > * {
    margin-top: auto;
}

#waveform {
    border-radius: 20px;
    padding: 10px 23px 10px 8px;
    background-color: var(--main-bg-color);
    box-sizing: content-box;
    line-height: 0;
}

#controls {
    position: relative;
    background-color: var(--controls-bg-color);
    height: var(--controls-height);
    box-sizing: border-box;
    border-top: 2px solid var(--controls-separator-color);
    padding-left: var(--main-padding);
    padding-right: var(--main-padding);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#language-controls {
    display: inline-block;
    text-align: left;
}

#language-controls > * {
    margin-top: auto;
}

#language-button i.fas.fa-language {
    position: relative;
    top: 0.075em;
}

#audio-controls {
    display: inline-block;
}

#audio-controls > .active {
    color: red;
}

#audio-controls > * {
    margin-right: 10px;
}

#audio-controls > *:last-child {
    margin-right: 0;
}

#viz-container svg .grid {
    stroke: var(--viz-color);
    opacity: var(--viz-low-alpha);
}

#viz-container svg .monospaced {
    font-family: 'Inconsolata', monospace;
    text-anchor: middle;
}

svg.letter-probability-viz rect {
    fill: var(--viz-color);
}

svg.letter-probability-viz text {
    font-size: 9px;
}

svg.letter-probability-viz .legend {
    fill: var(--viz-color);
}

svg.letter-probability-viz .letters {
    fill: var(--viz-bg-color);
}

svg.decoding-viz text {
    font-size: var(--viz-font-size);
    fill: var(--viz-color);
}

svg.text-transformation-viz .letters {
    fill: var(--viz-color);
}

svg.text-transformation-viz .button {
    alignment-baseline: central;
    fill: var(--viz-snd-color);
    stroke: var(--viz-snd-color);
}

svg.text-transformation-viz .button.disabled {
    fill: var(--viz-snd-color-mid-alpha);
    stroke: var(--viz-snd-color-mid-alpha);
}

svg.text-transformation-viz .button.prev {
    text-anchor: start;
}

svg.text-transformation-viz .button.next {
    text-anchor: end;
}

#reset-overlay {
    color: var(--viz-color);
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    background-color: rgba(0, 0, 0, 0.85);
}

#reset-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

#reset-overlay .counter-label, #reset-overlay .cancel-label {
    font-size: 50px;
}

#reset-counter {
    font-size: 100px;
}

